PGW-29: Dropdown positioning fixed for last filter, membership block alignment changed

--- a/sites/all/themes/tpg_theme/sass/variables/_sizes.scss
+++ b/sites/all/themes/tpg_theme/sass/variables/_sizes.scss
@@ -1,2 +1,3 @@
+$large-screen: 1500px;
 $lg-1: $screen-lg - 1px;
 $md-1: $screen-md - 1px;
